trunk/blocks/stylesheets/block_dragging.css
.drag_wrapper{
/*    border: 1px solid red; */
}

.drop_pointer{
    position: absolute;
    left: 14px;
    top: 0px;
    width: 11px;
    height: 6px;
/*    border: 1px solid red;  */
}

.drop_target{
    position: absolute;
    left: 0px;
    top: 24px;
    width: 100%;
    height: 6px;
}

.ui-droppable{
/*    background-color: yellow; */
}

.loop{
    min-height: 50px;
}


.loop > .drop_pointer{
    top: -22px;
    left: -30px;
}
.loop > .drop_target{
    top: -2px;
    left: -30px;
}

.loop > .drag_wrapper{
    position: relative;
    left: -28px;
}

